--- a/backend/.env
+++ b/backend/.env
@@ -2,7 +2,7 @@ PORT=5000
 NODE_ENV=development
 
 # MongoDB
-MONGODB_URI=mongodb://localhost:27017/chemotherapy-safety
+MONGODB_URI=mongodb+srv://chemosafe:chemosafe@chemosafe.avdejb2.mongodb.net/?appName=chemosafe
 
 # JWT
 JWT_SECRET=your_super_secret_jwt_key_here
