--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,7 @@
-# .env
-VITE_API_URL=http://localhost:5000/api
+# Frontend/.env
+VITE_FIREBASE_API_KEY=AIzaSyCJpRuJQbhugO6ivp4gIgM2GeQFewVwOvI
+VITE_FIREBASE_AUTH_DOMAIN=chemosafe-samanthisenarath38.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=chemosafe-samanthisenarath38
+VITE_FIREBASE_STORAGE_BUCKET=chemosafe-samanthisenarath38.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=133808438232
+VITE_FIREBASE_APP_ID=1:133808438232:web:ddacc8778bd2babc9f10ad
